# bevy_learning

./: Cargo.toml
.cargo/: config.toml
assets/: map.ldtk
assets/textures/: main.psd
src/: main.rs
src/entities/: common.rs  markers.rs  mod.rs  player.rs
src/plugins/: mod.rs  player.rs  world.rs
